Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.8.0
-
Ubuntu 16.10
Description
SKIP : tst_QImageReader::imageFormat(svgz) "svgz" images are not supported
Loc: [tst_qimagereader.cpp(533)]
libpng error: IDAT: invalid distance too far back
QWARN : tst_QImageReader::blackXPM() QImage::pixel: coordinate (25,25) out of range
FAIL! : tst_QImageReader::blackXPM() Compared values are not the same
Actual (image.pixel(25, 25)) : 4290690750
Expected (image2.pixel(25, 25)): 12345
Loc: [tst_qimagereader.cpp(545)]
PASS : tst_QImageReader::readFromResources(kollada.png)
libpng error: IDAT: invalid distance too far back
FAIL! : tst_QImageReader::readFromResources(black.png) '!image.isNull()' returned FALSE. ()
Loc: [tst_qimagereader.cpp(1415)]
PASS : tst_QImageReader::readFromResources(YCbCr_cmyk.png)